# metalab-atlas

./: .gitignore  README.md  hatch_build.py  pyproject.toml
atlas/: aggregate.py  capabilities.py  cli.py  deps.py  export.py  main.py  models.py  pg_store.py  remote.py  store.py
atlas/routers/: __init__.py  aggregate.py  artifacts.py  experiments.py  field_values.py  histogram.py  meta.py  runs.py  search.py
atlas/static/: index.html
atlas/static/assets/: index-B7xc1pjV.css  index-BCIP-bBW.css  index-BXxiq47w.css  index-CRZzFSLO.css  index-CRtL7mrY.js  index-CaywHSN0.js  index-ChDUWerT.css  index-CqTD6dMi.js  index-CxFp1hWV.js  index-D8_CQs4A.js  index-DSqrURUp.js  index-DWlsJ0q4.js  index-DavKwRaA.js  index-DjVdVART.css  index-DrA3KTHN.css  index-DxRjujWT.js  index-HPS7p2Ui.js
backend/: README.md  pyproject.toml
backend/atlas/: __init__.py  aggregate.py  cli.py  deps.py  index.py  main.py  models.py  remote.py  store.py
backend/atlas/routers/: __init__.py  aggregate.py  artifacts.py  experiments.py  histogram.py  meta.py  runs.py
backend/atlas/static/: index.html
backend/atlas/static/assets/: index-C4DznCWj.js  index-bz7IwabN.css
frontend/: .gitkeep  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/hooks/: useEffectiveFilter.ts  useGlobalShortcuts.ts  useTableNavigation.ts
frontend/src/pages/: ComparePage.tsx  ExperimentDetailPage.tsx  ExperimentsListPage.tsx  ExperimentsPage.tsx  (+3 more)
tests/: test_performance_overhaul.py
(+49 files in other folders)
