[project]
name = "metalab-atlas"
version = "0.1.0"
description = "Dashboard for exploring metalab experiment runs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "metalab",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "numpy>=1.26.0",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
metalab-atlas = "atlas.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.hatch.build.targets.wheel.sources]
"atlas" = "atlas"

# Include bundled frontend static files
[tool.hatch.build.targets.sdist]
include = [
    "atlas/**/*.py",
    "atlas/static/**/*",
]

[tool.hatch.build.targets.wheel.force-include]
"atlas/static" = "atlas/static"
